syntax = "proto3";

option java_package = "Mail";
option java_outer_classname = "MailSystem";

service Greeter {
  rpc sendMail (mailRequest) returns (mailResponse) {}
}

message mailRequest {
  string email = 1;
  string name = 2;
  uint32 accountType = 3;
}

message mailResponse {

}